# stardog-webfunction-plugin

./: .gitignore  README.md  pom.xml  sha
rust/: Cargo.toml
rust/function/array/of/: Cargo.toml
rust/function/array/of/src/: lib.rs
rust/function/math/constants/tau/: Cargo.toml
rust/httpget/: Cargo.toml
rust/pi/: Cargo.toml
rust/pi/src/: lib.rs
rust/stardog-aggregate-template/: Cargo.toml
rust/stardog-aggregate-template/src/: lib.rs
src/main/rust/function_object_detection/mobilenet-v2/: Cargo.toml
src/main/rust/function_object_detection/mobilenet-v2/src/: lib.rs
src/main/rust/function_string_similarity/jaro/: Cargo.toml
src/main/rust/function_string_similarity/levenshtein/: Cargo.toml
src/test/rust/: Cargo.toml  Makefile.toml
src/test/rust/aggregate/sum/: Cargo.toml
src/test/rust/aggregate/sum/src/: lib.rs
src/test/rust/camel-case/src/: lib.rs
src/test/rust/capitalize/src/: lib.rs
src/test/rust/doc-test/src/: lib.rs
src/test/rust/echo/: Cargo.toml
src/test/rust/echo/pkg/: to_upper_bg.wasm
src/test/rust/echo/src/: lib.rs
src/test/rust/function/array/: Cargo.toml
src/test/rust/function/array/append/: Cargo.toml
src/test/rust/function/array/append/src/: lib.rs
src/test/rust/function/array_of/: Cargo.toml
src/test/rust/function/array_of/src/: lib.rs
src/test/rust/function/concat/: Cargo.toml
src/test/rust/function/concat/src/: lib.rs
src/test/rust/function/const0x1x1/: Cargo.toml
src/test/rust/function/const0x1x1/src/: lib.rs
src/test/rust/function/const0x1x2/: Cargo.toml
src/test/rust/function/const0x1x2/src/: lib.rs
src/test/rust/function/const0x2x1/: Cargo.toml
src/test/rust/function/const0x2x1/src/: lib.rs
src/test/rust/function/const0x2x2/: Cargo.toml
src/test/rust/function/const0x2x2/src/: lib.rs
src/test/rust/function/doc_test/: Cargo.toml
src/test/rust/function/doc_test/src/: lib.rs
src/test/rust/function/echo1x1x1/: Cargo.toml
src/test/rust/function/echo1x1x1/src/: lib.rs
src/test/rust/function/echo1x2x1/: Cargo.toml
src/test/rust/function/echo1x2x1/src/: lib.rs
src/test/rust/function/echo2x1x1/: Cargo.toml
src/test/rust/function/echo2x1x1/src/: lib.rs
src/test/rust/function/echo2x2x1/: Cargo.toml
src/test/rust/function/echo2x2x1/src/: lib.rs
src/test/rust/function/empty/: Cargo.toml
src/test/rust/function/empty/src/: lib.rs
src/test/rust/function/is_numeric/: Cargo.toml
src/test/rust/function/is_numeric/src/: lib.rs
src/test/rust/function/mapping_dictionary_add/: Cargo.toml
src/test/rust/function/mapping_dictionary_add/src/: lib.rs
src/test/rust/function/mapping_dictionary_get/: Cargo.toml
src/test/rust/function/mapping_dictionary_get/src/: lib.rs
src/test/rust/function/math/constants/e/: Cargo.toml
src/test/rust/function/math/constants/frac_1_pi/: Cargo.toml
src/test/rust/function/math/constants/frac_1_sqrt_2/: Cargo.toml
src/test/rust/function/math/constants/frac_2_pi/: Cargo.toml
src/test/rust/function/math/constants/frac_2_sqrt_pi/: Cargo.toml
src/test/rust/function/math/constants/frac_pi_2/: Cargo.toml
src/test/rust/function/math/constants/frac_pi_3/: Cargo.toml
src/test/rust/function/math/constants/frac_pi_4/: Cargo.toml
src/test/rust/function/math/constants/frac_pi_6/: Cargo.toml
src/test/rust/function/math/constants/frac_pi_8/: Cargo.toml
src/test/rust/function/math/constants/ln_10/: Cargo.toml
src/test/rust/function/math/constants/ln_2/: Cargo.toml
src/test/rust/function/math/constants/log10_2/: Cargo.toml
src/test/rust/function/math/constants/log10_e/: Cargo.toml
src/test/rust/function/math/constants/log2_10/: Cargo.toml
src/test/rust/function/math/constants/log2_e/: Cargo.toml
src/test/rust/function/math/constants/pi/: Cargo.toml
src/test/rust/function/math/constants/sqrt_2/: Cargo.toml
src/test/rust/function/math/constants/tau/: Cargo.toml
src/test/rust/function/to_upper/: Cargo.toml
src/test/rust/function/to_upper/src/: lib.rs
src/test/rust/function/toupper_wasi_test/: Cargo.toml
src/test/rust/function/toupper_wasi_test/src/: lib.rs
src/test/rust/lang/detect/src/: lib.rs
src/test/rust/mappingdictionaryget/pkg/: to_upper.js
src/test/rust/mappingdictionaryget/src/: lib.rs
src/test/rust/similarity/jaro/: Cargo.toml
src/test/rust/similarity/jaro/pkg/: package.json
src/test/rust/similarity/levenshtein/: Cargo.toml
src/test/rust/similarity/levenshtein/src/: lib.rs
src/test/rust/similarity/normalized-levenshtein/pkg/: package.json  to_upper_bg.js
src/test/rust/similarity/normalized-levenshtein/src/: lib.rs
src/test/rust/stardog_function/: Cargo.toml
src/test/rust/stardog_function/src/: lib.rs
src/test/rust/stardog_sting_function_template/: Cargo.toml
src/test/rust/stardog_sting_function_template/src/: lib.rs
src/test/rust/string/camel-case/: Cargo.toml
src/test/rust/string/lang/whatlang/: Cargo.toml
src/test/rust/test-mapping-dictionary-add/: Cargo.toml
src/test/rust/test-mapping-dictionary-add/src/: lib.rs
src/test/rust/test-mapping-dictionary-get/: Cargo.toml
src/test/rust/test-mapping-dictionary-get/src/: lib.rs
src/test/rust/to_upper_pf/: Cargo.toml
src/test/rust/to_upper_pf/src/: lib.rs
src/test/rust/toupper/: Cargo.toml
src/test/rust/toupper/src/: lib.rs
(+243 files in other folders)
