[package]
name = "wasi-tensorflow-inference"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"


[dependencies]
base64 = "0.13.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
anyhow = "1.0"
stringreader = "0.1.1"

tract = "0.11.0"
tract-tensorflow = "0.11.0"
image = { version = "0.23.0", default-features = false, features = ["jpeg"] }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }

[lib]
crate-type = ["cdylib"]