[package]
name = "levenshtein"
version = "1.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.59" }
strsim = "0.10.0"
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }